--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,5 +5,6 @@ sonar.language=js
 sonar.sources=.
 sonar.tests=tests
 sonar.test.inclusions=tests/**/*.test.js
+sonar.exclusions=coverage/**,node_modules/**,**/*.test.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.sourceEncoding=UTF-8
