Scan docker image with Trivy/Clair

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,4 +55,15 @@ jobs:
         uses: gitleaks/gitleaks-action@v2
         with:
           args: detect --source . --no-git --redact --exit-code 1
-        
+      
+      - name: Build Docker image
+        run: docker build -t secure-pipeline-demo .
+
+      - name: Trivy Image Scan
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: secure-pipeline-demo
+          format: table
+          ignore-unfixed: true
+          exit-code: 1
+          severity: HIGH,CRITICAL
