--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,3 +68,56 @@ jobs:
           exit-code: 1
           severity: HIGH,CRITICAL
 
+  build-scan-push:
+    runs-on: ubuntu-latest
+    needs: build-test-and-analyze
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU (for multi-platform builds)
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and tag image
+        run: |
+          IMG=${{ secrets.DOCKERHUB_REPO }}:${{ github.sha }}
+          docker build -t $IMG .
+          docker tag $IMG ${{ secrets.DOCKERHUB_REPO }}:latest
+
+      - name: Trivy Image Scan
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: ${{ secrets.DOCKERHUB_REPO }}:${{ github.sha }}
+          format: table
+          ignore-unfixed: true
+          exit-code: 1
+          severity: HIGH,CRITICAL
+
+      - name: Push image to Docker Hub
+        run: |
+          docker push ${{ secrets.DOCKERHUB_REPO }}:${{ github.sha }}
+          docker push ${{ secrets.DOCKERHUB_REPO }}:latest
+
+      - name: Install cosign
+        run: |
+          curl -LO https://github.com/sigstore/cosign/releases/latest/download/cosign-linux-amd64
+          chmod +x cosign-linux-amd64
+          sudo mv cosign-linux-amd64 /usr/local/bin/cosign
+
+      - name: Cosign sign (optional, keyless)
+        if: success()
+        env:
+          COSIGN_EXPERIMENTAL: "1"
+        run: |
+          # this will prompt if keyless isn't permitted; for CI you'd use key pair and COSIGN_PASSWORD secret
+          cosign sign --key ${{ secrets.COSIGN_KEY }} ${{ secrets.DOCKERHUB_REPO }}:${{ github.sha }} || true
